tests/Tuc/Fixtures/errors/UndefinedParticipant-in-participants.tuc
tuc parse error test
participants
    UndefinedParticipantDefinition parts
